fix($stylesheet): Correct Reviews OwlCarousel spacing

--- a/src/styles/_section_reviews.scss
+++ b/src/styles/_section_reviews.scss
@@ -9,6 +9,25 @@
   .section__headings {
     margin: 0 0 $gutter-width * 2;
   }
+
+  .section__content {
+    padding: 0 $gutter-width;
+  }
+
+  .owl-carousel {
+
+    .owl-nav {
+
+      .owl-prev {
+        left: -($gutter-width);
+      }
+
+      .owl-next {
+        right: -($gutter-width);
+      }
+    }
+  }
+
 }
 
 .reviews__container {
@@ -18,8 +37,10 @@
 .reviews__list {
 
   .owl-item {
-    @include screen-md-min {
-      padding-right: $gutter-width;
+
+    &.active {
+      padding-right: $gutter-width / 2;
+      padding-left: $gutter-width / 2;
     }
   }
 }
